--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,9 +25,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Calendar" />
+        <activity android:name=".CalendarActivity" />
         <activity android:name=".Lists" />
-        <activity android:name=".Quit"></activity>
     </application>
 
 </manifest>
