Added in functionalities for the "Track" option in the home page.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         </activity>
         <activity android:name=".CalendarActivity" />
         <activity android:name=".Lists" />
+        <activity android:name=".TrackUser"></activity>
     </application>
 
 </manifest>
